--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,22 @@
-<h1>Welcome to Meadowlark Travel</h1>
+<h1>Login </h1>
 {{! This is super comment of handlebar }}
 <!-- this is html comment -->
+<form class="form" id="loginForm" action="/api/login" method="post">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="useremail" aria-describedby="emailHelp" placeholder="Enter email">
+   
+  </div>
+  <div class="form-group">
+    <label for="userpass">Password</label>
+    <input type="password" class="form-control" id="userpass" placeholder="Password">
+  </div>
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Remember me</label>
+  </div>
+  <div class="form-group pt-2">
+  <button type="submit" class="btn btn-primary">Submit</button>
+  <a href="/signup" class="btn btn-dark">Sign Up</a>
+  </div>
+</form>
