--- a/views/layouts/blogs.handlebars
+++ b/views/layouts/blogs.handlebars
@@ -2,6 +2,17 @@
 <html>
 <head>
  <title>Meadowlark Travel</title>
+ <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    
+ <link rel="stylesheet" href="/css/style.css" />
+ <link href="/img/favicon.ico" rel="icon" type="image/x-icon" />
+
 </head>
 <body>
     <header>
@@ -14,6 +25,8 @@
         </ul>
     </nav>
  {{{body}}}
- <footer>Copright &copy; 2021 all rights reserve.</footer>
+ 
+<footer>Copright &copy; 2021 all rights reserve.</footer>
+
 </body>
 </html>
