--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,15 +1,2 @@
 <h1>Dashboard</h1>
-<ul class="nav justify-content-center">
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Employee</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">CIT</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Salary</a>
-  </li>
-</ul>
+{{> adminnav}}
