--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,15 +1,16 @@
 <h1>Login </h1>
 {{! This is super comment of handlebar }}
 <!-- this is html comment -->
+MSG : {{msg}}
 <form class="form" id="loginForm" action="/api/login" method="post">
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="useremail" aria-describedby="emailHelp" placeholder="Enter email">
+    <input type="email" class="form-control" id="useremail" name="email" aria-describedby="emailHelp" placeholder="Enter email">
    
   </div>
   <div class="form-group">
     <label for="userpass">Password</label>
-    <input type="password" class="form-control" id="userpass" placeholder="Password">
+    <input type="password" class="form-control" id="userpass" name="password" placeholder="Password">
   </div>
   <div class="form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
