--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,15 +2,15 @@
 {{! This is super comment of handlebar }}
 <!-- this is html comment -->
 MSG : {{msg}}
-<form class="form" id="loginForm" action="/api/login" method="post">
+<form class="form" id="loginForm" action="/api/admin/login" method="post">
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="useremail" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+    <input type="email"  autocomplete="off" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Enter email">
    
   </div>
   <div class="form-group">
     <label for="userpass">Password</label>
-    <input type="password" class="form-control" id="userpass" name="password" placeholder="Password">
+    <input type="password"  autocomplete="off" class="form-control" id="password" name="password" placeholder="Password">
   </div>
   <div class="form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
