--- a/views/partials/adminnav.handlebars
+++ b/views/partials/adminnav.handlebars
@@ -3,16 +3,16 @@
     <a class="nav-link active" href="/">Dashboard</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/employee">Employee</a>
+    <a class="nav-link" href="/admin/employee">Employee</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/employee">Register</a>
+    <a class="nav-link" href="/admin/employee">Register</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">CIT</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Salary</a>
+    <a class="nav-link" href="/admin/salary">Salary</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="/logout">Log Out</a>
